@@ -1,3 +1,4 @@
+- cleanup single STRM creation (removed unapplicable prompts from process for a single file): catalog strms to false stops transcoding AND original streams being created #53
 - fix for folders (not single STRM): catalog strms to false stops transcoding AND original streams being created #53
 - add manual whitelist ip
 - should whitelist local public IP for ffprobe requests
